# ckb-miscellaneous-scripts

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.clang  README.md
.github/workflows/: secp256r1_blake160.yml  tests.yml
blst/: blst.patch  blst_mul_mont_384.riscv.S  blst_mul_mont_384x.riscv.S
c/: aggregated_simple_udt.c  and.c  bls12_381_sighash_all.c  bn256g2.hpp  ckb_dlfcn_decl_only.h  ckb_smt.c  ckb_smt.h  ckb_syscalls_decl_only.h  common.h  dual.syms  ecmult_static_context.h  ecmult_static_pre_context.h  htlc.c  libecc_helper.h  libecc_nn_mul_redc1.c  libecc_test.c  librsa_secp256k1.c  ll_u256_mont-riscv64.S  ll_u256_mont_mul.c  open_transaction.c  or.c  or.h  or.mol  partial_composable_lock.c  poa.c  rc_lock.mol  rc_lock_mol.h  rc_lock_mol2.h  rsa_sighash_all.c  rsa_sighash_all.h  rsa_sighash_all_static.c  secp256k1_blake2b_sighash_all_dual.c  secp256k1_blake2b_sighash_all_lib.c  secp256k1_blake2b_sighash_all_static.c  secp256r1_bench.c  secp256r1_blake160_sighash_all.c  secp256r1_blake160_sighash_bench.c  secp256r1_blake160_sighash_lay2dev_all.c  secp256r1_blake160_sighash_lay2dev_bench.c  secp256r1_blake160_test.c  (+4 more)
docs/c/: open_transaction.html  secp256k1_blake2b_sighash_all_dual.html  simple_udt.html
docs/libecc-optimization-notes/: README.md  _nn_mul_redc1.source.disasm
include/: rsa_secp256k1.h
simulator/: Makefile  README.md  aggregated_simple_udt_usesim.c  blake2b_decl_only.h  blake2b_imp.c  cJSON.c  ckb_syscall_agg_sudt.h  ckb_syscall_sim.c  ckb_syscall_sim.h  ckb_syscall_simulator.c  ckb_syscall_simulator.h  molecule_decl_only.h  rsa_sighash_all_usesim.c  run-simulator.sh
simulator/data/: data.json  data2.json  data3.json  original.json  original2.json  original3.json  sudt.json  sudt_data.json  test.json
temp/libecc-optimization-notes/: README.md
tests/blst/: CMakeLists.txt  main.c
tests/blst_rust/: Cargo.toml
tests/blst_rust/src/: rc_lock.rs
tests/blst_rust/tests/: misc.rs  test_blst.rs
tests/secp256r1_blake160/: Cargo.toml  build.rs
tests/secp256r1_blake160/src/: lib.rs
tests/secp256r1_blake160/src/tests/: mod.rs  secp256r1_blake160_sighash_all.rs
tests/secp256r1_blake160_c/: main.c
tests/secp256r1_rust/: Cargo.toml
tests/secp256r1_rust/src/: lib.rs
tests/secp256r1_rust/tests/: misc.rs  test_secp256r1.rs
tests/static-libraries/: Makefile  README.md  test_static_lib.c
tests/sudt_lua/: Cargo.toml  build.rs
tests/sudt_lua/src/: lib.rs  tests.rs
tools/: pprof.py
